# Shell

./: README.md
42sh/: AUTHORS  CMakeLists.txt  Changelog  Makefile  README  TODO  configure
42sh/doc/: 42sh.man  Doxyfile
42sh/src/ast/: ast.h  ast_struct.h  free_long_struct.c  free_long_struct.h  free_rule.c  free_rule.h  free_struct.c  free_struct.h  list_add.c  list_add.h  rule.c  rule.h  rule_case.c  rule_case.h  shell_cmd.c  shell_cmd.h  struct_create.c  struct_create.h  union.c  union.h
42sh/src/ast_printer/: ast_printer.c  ast_printer.h  read_sh_cmd.c  read_sh_cmd.h  read_tree.c  read_tree.h
42sh/src/builtins/: builtin_alias.c  builtin_alias.h  builtin_cd.c  builtin_echo.c  builtin_exit.c  builtin_export.c  builtin_shopt.c  builtin_source.c  builtins.c  builtins.h
42sh/src/evalexpr/: evalexpr.c  evalexpr.h
42sh/src/execution/: execute_case.c  execute_cmd.c  execute_list.c  execute_pipe.c  execute_redirect.c  execute_rule.c  execution.h
42sh/src/lexer/: dollar.c  dollar.h  getlineps2.c  getlineps2.h  group_lexer.c  group_lexer.h  lexer.c  lexer.h  list_token.c  list_token.h  quoting.c  quoting.h
42sh/src/main/: main.c  main.h  parser_options.c  parser_options.h
42sh/src/parser/: parser.h  parser_bracket.c  parser_case.c  parser_command.c  parser_element.c  parser_error.c  parser_global.c  parser_redirection.c  parser_rules.c  parser_rules_for.c
42sh/src/prompt/: prompt.c  prompt.h
42sh/src/readline/: readline.c  readline.h  readline_init.c
42sh/src/signals/: signals.c  signals.h
42sh/src/substitution/: alias.c  alias.h  dquote_sub.c  dquote_sub.h  init_var.c  my_int.c  my_int.h  var_sub.c  var_sub.h
42sh/src/tilde/: ;  tilde.c  tilde.h
42sh/src/variable/: variable.c  variable.h
42sh/test/: check.man  check.py  checkbashzsh.py
(+217 files in other folders)
